fixed header shrink issue fixed text-bubble alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,10 +51,8 @@ header{
   width: 100%;
   height: auto;
   background-color: $mainBgColor;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  top:0;
+  z-index: 1000;
   //transition: height .4s; does not work
   .logo{
     // width: 100%;
@@ -94,9 +92,27 @@ header{
   }
 }
 
+.header-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 984px;
+}
+
 .header-shrink{
-  position: fixed;
-  z-index: 1000;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  max-width: 984px;
+  background-color: $mainBgColor;
+  width: 100%;
+  //position: fixed;
+  top: 0;
+  z-index: 9000;
   //width: 100%;
   height: 60px;
   padding: 1em 0;
@@ -140,8 +156,9 @@ header{
 //***************************************************//
 .intro-text{
   background-color: white;
+  max-width: 819px;
   padding: 1em;
-  margin-bottom: 1em;
+  margin: 1em auto;
     h3{
       font-size: 1.1em;
       text-align: center;
@@ -183,6 +200,9 @@ header{
   grid-template-rows: auto;
   grid-gap: 20px;
   margin: 0 20px;
+  padding-bottom: 50px;
+  border-bottom: 3px solid $mainBgColor;
+  max-width: 984px;
 
   //anchor offset to fix fixed header
 
@@ -252,14 +272,13 @@ header{
 .contact-container{
   //width: 100%;// is this necessary???
   position: relative;
+  max-width: 430px;
+  margin: 0 auto;
 
   .contact-text{
-    border-top: 3px solid $mainBgColor;
-    margin: 40px 20px 30px;
-    h1{
-      text-align: center;
-    }
-    p{
+    //border-top: 3px solid $mainBgColor;
+    margin: 20px 20px 30px;
+    h1, p{
       text-align: center;
     }
   }
@@ -305,7 +324,8 @@ header{
 
 .text-bubble{
   position: absolute;
-  top: 300px;
+  max-width: 368px;
+  top: 220px;
   left: 20px;
   width: 90%;
   tspan:last-child{
@@ -324,18 +344,13 @@ header{
 //***************************************************//
 //***************************************************//
 
-footer{
-  background-color: $mainBgColor;
-}
-
-
 .social-container{
   display: flex;
   justify-content: space-around;
-  padding: 10px;
+  background-color: $mainBgColor;
+  padding: 6px;
   img{
     padding: 10px;
-
   }
 }
 
@@ -396,16 +411,18 @@ nav ul li a:hover{
 //***************************************************//
 //***************************************************//
 
-@media (min-width:480px)  { /* smartphones, Android phones, landscape iPhone */ }
 
 @media (min-width:600px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 
-  header{
+  .header-container{
     flex-direction: row;
     // align-items: center;
     justify-content: space-between;
     .logo{
       padding: 1em 1.25em;
+      svg{
+        margin: 0;
+      }
     }
     nav{
       ul{
@@ -417,12 +434,27 @@ nav ul li a:hover{
     }
   }
 
+  .header-shrink{
+    justify-content: space-between;
+    nav{
+      ul{
+        margin-right: 1.25em;
+        li{
+          font-size: 1em;
+        }
+      }
+    }
+  }
+
+
   .intro-text{
-    padding: 2em .5em;
+    padding: 2em;
   }
 
   .contact-container{
-    margin: 0 20px;
+    //margin: 0 20px;
+    max-width: 552px;
+    margin: 0 auto;
     .contact-text{
       margin: 40px 0 30px;
       p{
@@ -440,6 +472,16 @@ nav ul li a:hover{
         text-align: left;
       }
     }
+    .form-btn{
+      width: calc(60% - 40px);
+      display: inline-block;
+      margin-left: calc(60% - 90px);
+
+    }
+    .text-bubble{
+      top: 125px;
+      left: 150px;
+    }
   }
 
   .social-container{
@@ -455,5 +497,39 @@ nav ul li a:hover{
 
 
 }
-@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */
+
+
+
+  .header-container{
+    .logo{
+      padding: 1em 0;
+    }
+
+    margin: 0 auto;
+
+    nav{
+      margin: .5em 0 0 0;
+      ul{
+        margin-right: 0;
+      }
+    }
+  }
+
+  .header-shrink{
+    margin: 0 auto;
+  }
+
+  .portfolio-container{
+    margin: 0 auto;
+  }
+
+    .contact-text{
+      h1, p{
+      text-align:left;
+      }
+    }
+
+
+}
 @media (min-width:1281px) { /* hi-res laptops and desktops */ }
